--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -7,6 +7,7 @@ fr:
     signout_button_text: 'Se déconnecter'
   admin:
     shared:
+      close: 'Femer'
       form_action:
         back_btn: 'Retour'
         save_btn: 'Enregistrer'
