--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -33,6 +33,8 @@ fr:
         tags: "Les tags de l'émission"
         account_platform: 'Platforme'
         account_url: 'Lien public du compte'
+        platform_name: 'Nom de la platforme'
+        platform_name_help: "Si la plateforme n'est pas une platforem dans la liste, vous pouvez choisir podcast et mettre le nom que vous voulez."
         add_account_btn: 'Ajouter un compte'
     diffusions:
       title: 'Diffusions'
