--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -67,6 +67,7 @@ fr:
         date_debut_label: "Date de début de l'émission"
         jour_diffusion_header: 'Les jours de diffusion'
         rediffusion_header: 'Rediffusion'
+        rediffusion_label: 'Rediffusion'
         submit_label: 'Créer la diffusion'
         diffuse_lundi_label: 'Lundi'
         diffuse_mardi_label: 'Mardi'
